static/css/exomind.css
.btn-floating {
  flex-shrink: 0;
}

.EXM-title-right-button {
  display: flex;
  align-items: center;
}
.EXM-title-right-button :first-child {
  flex-grow: 1;
}

.EXM-sidenav .sidenav-toggle {
  display: none;
}
.EXM-sidenav .sidenav-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  transition: opacity 0.2s ease-in;
}
.EXM-sidenav .sidenav-toggle:checked ~ .sidenav-backdrop {
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 9;
  visibility: visible;
  opacity: 1;
}

.EXM-sidenav .sidenav-content {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  max-width: 80%;
  z-index: 90;
  visibility: hidden;
  transform: translateX(-105%);
  transition: transform 0.2s ease, visibility 0.2s;
}
.EXM-sidenav .sidenav-toggle:checked ~ .sidenav-content {
  visibility: visible;
  transform: translateX(0%);
  transition: transform 0.2s ease, visibility 0.2s;
}

.EXM-sidenav .sidenav-content li {
  width: 100%;
}
.EXM-link-button {
  width: 100%;
  display: block;
  color: #fff;
  text-transform: unset;
  text-align: left;
  padding: 0 15px;
  height: 64px;
}
.EXM-link-button:hover {
  background-color: rgba(0, 0, 0, 0.1);
}
.EXM-sidenav hr {
  border-color: #ee6e73;
}
.EXM-btn-social-signin {
  width: 200px;
}
.EXM-btn-social-signin__google {
  width: 204px;
}
.EXM-sidenav-menu-button {
  height: unset; 
}

.collection .EXM-review-item.collection-item {
  display: flex;
  padding: 0;
}

.EXM-review-item__image {
  width: 54px;
  height: 54px;
  margin: auto;
}
.EXM-review-item__image img {
  width: 54px;
  height: 54px;
  border-radius: 10%;
}
.EXM-review-item__image i {
  border-radius: 10%;
  text-align: center;
  vertical-align: middle;
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.EXM-review-item__left {
  padding: 10px;
  flex: 0 0 auto;
}


.EXM-review-item__right {
  padding: 10px;
  padding-left: 0;
  flex: 0 1 auto;
}
.EXM-review-item__right h6 {
  margin-top: 0px;
}

.EXM-review-form__container {
  display: flex;
  flex-direction: column-reverse;
  padding-top: 2.5em;
}

.EXM-review-form__container label {
  margin-bottom: 0;
}

.EXM-review-form__container textarea {
  margin-bottom: 1em;
}

.EXM-review-form__container textarea ~ label {
  margin-bottom: 0.5em;
}

.EXM-review-form__container textarea:focus ~ label,
.EXM-review-form__container input[type=range]:focus ~ label {
  color: #26a69a;
}

input.EXM-ratings-slider {
  padding: 0 2px;
  margin: 5px 0px;
}

input.EXM-ratings-slider:disabled,
input.EXM-ratings-slider:disabled ~ .EXM-ratings-ticks {
  opacity: 0.3;
}

.EXM-review-form__no-rating__container {
  display: inline-block;
}

.EXM-ratings-ticks {
  display: flex;
  justify-content: space-between;
  padding: 0 10px;
}
.EXM-ratings-ticks p {
  display: flex;
  justify-content: center;
  text-align: center;
  width: 1px;
  background: #D3D3D3;
  height: 10px;
  line-height: 40px;
  margin: 0 0 20px 0;
}

.EXM-like-form {
  display: inline-block;
}

.EXM-next-back-footer {
  display: flex;
  justify-content: space-between;
  font-size: 1.5em;
}

.hvr-gray:hover {
  background: #D3D3D3;
}

